[package]
name = "rtc-ice"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "RTC ICE in Rust"
license.workspace = true
documentation = "https://docs.rs/rtc-ice"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
shared = { workspace = true, default-features = false, features = [] }
sansio.workspace = true
stun.workspace = true
mdns.workspace = true

crc = "3.0.1"
log = "0.4.21"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
url = "2.5.0"
uuid = { version = "1", features = ["v4"] }
bytes = "1.5.0"

[dev-dependencies]
regex = "1.10.3"
env_logger = "0.11.3"
chrono = "0.4.35"
ipnet = "2.9.0"
clap = { version = "4.5.2", features = ["derive"] }
lazy_static = "1.4.0"
hyper = { version = "0.14.28", features = ["full"] }
sha1 = "0.10.6"
waitgroup = "0.1.2"
serde_json = "1.0.114"
tokio = { version = "1.36", features = ["full"] }
futures = "0.3.30"
ctrlc = "3.4"

[[example]]
name = "ping_pong"
path = "examples/ping_pong.rs"
bench = false
