[package]
name = "rtc-interceptor"
version = "0.0.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2024"
description = "RTC Interceptor in Rust"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/rtc-interceptor"
homepage = "https://ortc.rs"
repository = "https://github.com/webrtc-rs/rtc/tree/master/rtc-interceptor"

[dependencies]

[dev-dependencies]