[package]
name = "rtc-interceptor"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "RTC Interceptor in Rust"
license.workspace = true
documentation = "https://docs.rs/rtc-interceptor"
homepage.workspace = true
repository.workspace = true

[dependencies]

[dev-dependencies]