[package]
name = "rtc-mdns"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "RTC mDNS in Rust"
license.workspace = true
documentation = "https://docs.rs/rtc-mdns"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

[dev-dependencies]
