[package]
name = "rtc-mdns"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "RTC mDNS in Rust (sans-I/O)"
license.workspace = true
documentation = "https://docs.rs/rtc-mdns"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
shared = { workspace = true, default-features = false, features = ["ifaces"] }
sansio.workspace = true

bytes.workspace = true
log.workspace = true
socket2 = { version = "0.5", features = ["all"] }

[dev-dependencies]
env_logger = "0.11.3"
tokio.workspace = true
clap = { version = "4", features = ["derive"] }
chrono = "0.4.42"

[[example]]
name = "mdns_query"
path = "examples/mdns_query.rs"

[[example]]
name = "mdns_server"
path = "examples/mdns_server.rs"

[[example]]
name = "mdns_server_query"
path = "examples/mdns_server_query.rs"
