[package]
name = "rtc-rtcp"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "RTC RTCP in Rust"
license.workspace = true
documentation = "https://docs.rs/rtc-rtcp"
homepage.workspace = true
repository.workspace = true

[dependencies]
shared = { workspace = true, default-features = false, features = ["marshal"] }

bytes = "1.5.0"
