[package]
name = "rtc-rtp"
version = "0.2.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
description = "RTC RTP in Rust"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/rtc-rtp"
homepage = "https://ortc.rs"
repository = "https://github.com/webrtc-rs/rtc/tree/master/rtc-rtp"

[dependencies]
shared = { version = "0.2.0", path = "../rtc-shared", package = "rtc-shared", default-features = false, features = ["marshal"] }

bytes = "1.5.0"
rand = "0.9"
serde = { version = "1.0.197", features = ["derive"] }
memchr = "2.1.1"

[dev-dependencies]
chrono = "0.4.35"
criterion = "0.5.1"

[[bench]]
name = "packet_bench"
harness = false
