[package]
name = "rtc-rtp"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "RTC RTP in Rust"
license.workspace = true
documentation = "https://docs.rs/rtc-rtp"
homepage.workspace = true
repository.workspace = true

[dependencies]
shared = { workspace = true, default-features = false, features = ["marshal"] }

bytes = "1.5.0"
rand = "0.9"
serde = { version = "1.0.197", features = ["derive"] }
memchr = "2.1.1"

[dev-dependencies]
chrono = "0.4.35"
criterion = "0.5.1"

[[bench]]
name = "packet_bench"
harness = false
