[package]
name = "rtc-sctp"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "RTC SCTP in Rust"
license.workspace = true
documentation = "https://docs.rs/rtc-sctp"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
shared = { workspace = true, default-features = false, features = [] }

bytes = "1.5.0"
rand = "0.9"
slab = "0.4.9"
thiserror = "1.0.57"
log = "0.4.21"
crc = "3.2.1"

[dev-dependencies]
assert_matches = "1.5.0"
lazy_static = "1.4.0"
