[package]
name = "rtc-sctp"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "RTC SCTP in Rust"
license.workspace = true
documentation = "https://docs.rs/rtc-sctp"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
shared = { workspace = true, default-features = false, features = [] }

bytes.workspace = true
rand.workspace = true
thiserror.workspace = true
slab = "0.4.9"
log.workspace = true
crc = "3.2.1"

[dev-dependencies]
assert_matches = "1.5.0"
lazy_static = "1.4.0"
