[package]
name = "rtc-sdp"
version = "0.2.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
description = "RTC SDP in Rust"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/rtc-sdp"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/rtc"

[dependencies]
url = "2.5.0"
rand = "0.8.5"
thiserror = "1.0.57"
substring = "1.4.5"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
