[package]
name = "rtc-sdp"
version = "0.2.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
description = "RTC SDP in Rust"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/rtc-sdp"
homepage = "https://ortc.rs"
repository = "https://github.com/webrtc-rs/ortc"

[dependencies]
shared = { version = "0.2.1", path = "../rtc-shared", package = "rtc-shared", default-features = false, features = [] }

url = "2.5.0"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
