[package]
name = "rtc-shared"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "RTC Shared in Rust"
license.workspace = true
documentation = "https://docs.rs/rtc-shared"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["crypto", "marshal", "replay"]
crypto = []
marshal = []
replay = []

[dependencies]
thiserror = "1.0.58"
substring = "1.4.5"
bytes = "1.5.0"
aes-gcm = { version = "0.10.3", features = ["std"] }
url = "2.5.0"
rcgen = { version = "0.13.2", features = ["pem", "x509-parser"] }
sec1 = { version = "0.7.3", features = ["std"] }
p256 = { version = "0.13.2", features = ["default", "ecdh", "ecdsa"] }
aes = "0.8.4"
rand = "0.9.2"
