[package]
name = "rtc-srtp"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "RTC SRTP in Rust"
license.workspace = true
documentation = "https://docs.rs/rtc-srtp"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
openssl = ["dep:openssl"]
vendored-openssl = ["openssl/vendored"]

[dependencies]
shared = { workspace = true, default-features = false, features = ["crypto", "marshal", "replay"] }
rtp.workspace = true
rtcp.workspace = true

byteorder.workspace = true
bytes.workspace = true
hmac = { version = "0.12.1", features = ["std", "reset"] }
sha1 = "0.10.6"
ctr = "0.9.2"
aes = "0.8.4"
subtle = "2.5.0"
aead = { version = "0.5.2", features = ["std"] }
aes-gcm = { version = "0.10.3", features = ["std"] }
openssl = { version = "0.10.72", optional = true }

[dev-dependencies]
lazy_static = "1.4.0"
