[package]
name = "rtc-stun"
version = "0.1.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
description = "RTC STUN in Rust"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/rtc-stun"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/rtc"

[features]
default = []
bench = []

[dependencies]
shared = { version = "0.1", path = "../rtc-shared", package = "rtc-shared", default-features = false, features = [] }

bytes = "1.4"
lazy_static = "1.4"
url = "2.2"
rand = "0.8"
base64 = "0.22"
subtle = "2.4"
crc = "3.0"
ring = "0.17"
md-5 = "0.10"
thiserror = "1.0"

[dev-dependencies]
clap = "4.5"
criterion = "0.5"

[[bench]]
name = "bench"
harness = false

[[example]]
name = "stun_client"
path = "examples/stun_client.rs"
bench = false

[[example]]
name = "stun_decode"
path = "examples/stun_decode.rs"
bench = false
