[package]
name = "rtc-stun"
version = "0.2.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
description = "RTC STUN in Rust"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/rtc-stun"
homepage = "https://ortc.rs"
repository = "https://github.com/webrtc-rs/ortc/tree/master/rtc-stun"

[features]
default = []
bench = []

[dependencies]
shared = { version = "0.2.0", path = "../rtc-shared", package = "rtc-shared", default-features = false, features = [] }

bytes = "1.5.0"
lazy_static = "1.4.0"
url = "2.5.0"
rand = "0.8.5"
base64 = "0.22.0"
subtle = "2.5.0"
crc = "3.0.1"
ring = "0.17.8"
md5 = "0.7.0"

[dev-dependencies]
clap = { version = "4.5.2", features = ["derive"] }
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false

[[example]]
name = "stun_client"
path = "examples/stun_client.rs"
bench = false

[[example]]
name = "stun_decode"
path = "examples/stun_decode.rs"
bench = false
