[package]
name = "rtc-turn"
version = "0.1.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
description = "RTC TURN in Rust"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/rtc-turn"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/rtc"

[dependencies]
shared = { version = "0.2.0", path = "../rtc-shared", package = "rtc-shared", default-features = false, features = [] }
stun = { version = "0.2.0", path = "../rtc-stun", package = "rtc-stun" }

bytes = "1.5.0"
log = "0.4.21"

[dev-dependencies]
env_logger = "0.11.3"
chrono = "0.4.35"
hex = "0.4.3"
clap = { version = "4.5.3", features = ["derive"] }
criterion = "0.5.1"
crossbeam-channel = "0.5"
ctrlc = "3.4"

[features]
metrics = []

[[bench]]
name = "bench"
harness = false

[[example]]
name = "turn_client_udp"
path = "examples/turn_client_udp.rs"
bench = false
