[package]
name = "rtc-turn"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "RTC TURN in Rust"
license.workspace = true
documentation = "https://docs.rs/rtc-turn"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
shared = { workspace = true, default-features = false, features = [] }
stun.workspace = true

bytes = "1.5.0"
log = "0.4.21"

[dev-dependencies]
env_logger = "0.11.3"
chrono = "0.4.35"
hex = "0.4.3"
clap = { version = "4.5.3", features = ["derive"] }
criterion = "0.5.1"
crossbeam-channel = "0.5"
ctrlc = "3.4"

[features]
metrics = []

[[bench]]
name = "bench"
harness = false

[[example]]
name = "turn_client_udp"
path = "examples/turn_client_udp.rs"
bench = false
