[package]
name = "rtc"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Sans-I/O WebRTC implementation in Rust"
license.workspace = true
documentation = "https://docs.rs/rtc"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"
build = "build.rs"

[dependencies]
shared = { workspace = true, default-features = false, features = ["crypto", "marshal", "replay"] }
sansio.workspace = true
datachannel.workspace = true
dtls.workspace = true
ice.workspace = true
interceptor.workspace = true
mdns.workspace = true
media.workspace = true
rtcp.workspace = true
rtp.workspace = true
sctp.workspace = true
sdp.workspace = true
srtp.workspace = true
stun.workspace = true
turn.workspace = true

bytes = "1.5"
log = "0.4"
serde = "1"
serde_json = { version = "1", features = [] }
rcgen = { version = "0.13.2", features = ["pem", "x509-parser"] }
ring = "0.17"
sha2 = "0.10"
rustls = { version = "0.23.35", default-features = false, features = ["std", "ring"] }
url = { version = "2", features = [] }
hex = { version = "0.4", features = [] }
pem = { version = "3", optional = true }
unicase = "2.8"
rand = "0.9.2"
libc = { version = "0.2", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Networking_WinSock",
], optional = true }

[dev-dependencies]
webrtc = "0.14.0"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
anyhow = "1"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[build-dependencies]
cdylib-link-lines = { version = "0.1", optional = true }

[features]
default = []
pem = ["dep:pem", "dtls/pem"]
openssl = ["srtp/openssl"]
vendored-openssl = ["srtp/vendored-openssl"]
ffi = ["dep:cdylib-link-lines", "dep:libc", "dep:windows-sys"]
