[package]
name = "rtc"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Sans-I/O WebRTC implementation in Rust"
license.workspace = true
documentation = "https://docs.rs/rtc"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[dependencies]
shared = { workspace = true, default-features = false, features = ["crypto", "marshal", "replay"] }
sansio.workspace = true
datachannel.workspace = true
dtls.workspace = true
ice.workspace = true
interceptor.workspace = true
mdns.workspace = true
media.workspace = true
rtcp.workspace = true
rtp.workspace = true
sctp.workspace = true
sdp.workspace = true
srtp.workspace = true
stun.workspace = true
turn.workspace = true

bytes.workspace = true
log.workspace = true
serde = "1"
serde_json = { version = "1", features = [] }
rcgen.workspace = true
ring = { workspace = true, optional = true }
aws-lc-rs = { workspace = true, optional = true }
sha2 = "0.10"
rustls = { version = "0.23.35", default-features = false, features = ["std"] }
url = { version = "2", features = [] }
hex = { version = "0.4", features = [] }
pem = { version = "3", optional = true }
unicase = "2.8"
rand.workspace = true

[dev-dependencies]
webrtc = "0.14.0"
tokio.workspace = true
env_logger.workspace = true
anyhow = "1"

[features]
default = ["ring"]
pem = ["dep:pem", "dtls/pem"]
openssl = ["srtp/openssl"]
vendored-openssl = ["srtp/vendored-openssl"]
ring = ["dep:ring", "dtls/ring", "rustls/ring", "rcgen/ring", "stun/ring", "srtp/ring"]
aws-lc-rs = ["dep:aws-lc-rs", "dtls/aws-lc-rs", "rustls/aws-lc-rs", "rcgen/aws_lc_rs", "stun/aws-lc-rs", "srtp/aws-lc-rs"]
__testing = []
