[package]
name = "rtcp"
version = "0.0.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
description = "RTCP in Rust"
license = "MIT/Apache-2.0"

[dependencies]
shared = { path = "../rtc-shared", package = "rtc-shared", default-features = false, features = ["marshal"] }

bytes = "1"
thiserror = "1.0"
