[package]
name = "rtp"
version = "0.0.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
description = "RTP in Rust"
license = "MIT/Apache-2.0"

[dependencies]
shared = { path = "../rtc-shared", package = "rtc-shared", default-features = false, features = ["marshal"] }

bytes = "1"
rand = "0.8.5"
thiserror = "1.0"
serde = { version = "1.0.102", features = ["derive"] }

[dev-dependencies]
chrono = "0.4.31"
criterion = "0.5"

[[bench]]
name = "packet_bench"
harness = false
