[package]
name = "sctp"
version = "0.0.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
description = "SCTP in Rust"
license = "MIT/Apache-2.0"

[dependencies]
shared = { path = "../shared", package = "shared", default-features = false, features = [] }

bytes = "1.4.0"
fxhash = "0.2.1"
rand = "0.8.5"
slab = "0.4.7"
thiserror = "1.0.38"
log = "0.4.17"
crc = "3.0.1"

[dev-dependencies]
assert_matches = "1.5.0"
lazy_static = "1.4.0"
