[package]
name = "sdp"
version = "0.0.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
description = "SDP in Rust"
license = "MIT/Apache-2.0"

[dependencies]
url = "2.2"
rand = "0.8.5"
thiserror = "~1.0.10"
substring = "1.4"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "bench"
harness = false
