[package]
name = "shared"
version = "0.0.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
description = "Shared in Rust"
license = "MIT/Apache-2.0"

[features]
default = ["crypto", "marshal", "replay"]
crypto = []
marshal = []
replay = []

[dependencies]
thiserror = "~1.0.2"
bytes = "1.4.0"
aes-gcm = { version = "0.10", features = ["std"] }
url = "2.2"
rcgen = "0.11"
sec1 = { version = "0.7", features = [ "std" ] }
p256 = { version = "0.13", features = ["default", "ecdh", "ecdsa"] }
aes = "0.8"