[package]
name = "srtp"
version = "0.0.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
description = "SRTP in Rust"
license = "MIT/Apache-2.0"

[dependencies]
shared = { path = "../rtc-shared", package = "rtc-shared", default-features = false, features = ["crypto", "marshal", "replay"] }
rtp = { path = "../rtp", package = "rtp" }
rtcp = { path = "../rtcp", package = "rtcp" }

retty = "0.24"
byteorder = "1"
bytes = "1"
thiserror = "1.0"
hmac = { version = "0.12", features = ["std", "reset"] }
sha1 = "0.10"
ctr = "0.9"
aes = "0.8"
subtle = "2.4"
log = "0.4"
aead = { version = "0.5", features = ["std"] }
aes-gcm = { version = "0.10", features = ["std"] }

[dev-dependencies]
lazy_static = "1.4"
