[package]
name = "aead-gcm-bench"
version = "0.0.0"
edition = "2021"
publish = false

# Standalone workspace on purpose: kept out of the rtc workspace so its `aes-gcm`
# comparison dependency does not re-enter the main crates' dependency tree (the
# point of the change this benchmarks is to drop `aes-gcm` from the GCM paths).
[workspace]

[[bin]]
name = "aead-bench"
path = "src/main.rs"

# Versions mirror what rtc pins, so the numbers reflect the real comparison.
[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
ring = "0.17"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
